$Id$

2017-09-23  Alex Samorukov  <samm@os2.kiev.ua>
 	drivedb.h: 
	- Fix HGST HDS724040ALE640 (#885)
	- Add Toshiba MQ03ABB300 (#884)
	- Fixed Hitachi 7K1000 (#883)
	- Added Seagate Barracuda 2.5 5400 series (#882)
	- Added Toshiba P300 series (#881)
	- Added SK hynix SSD SC300 series (#699)
	- Added Toshiba HG6 Series SSD (#721)
	- Added Hynix SSD series
	- Added AMD Radeon Solid State Drives (#762)
	- Added USB Bridge 0x3538:0x0064 (#855)
	- Added Seagate ST4000NM0085 to the Capacity family
	- Added Sandisk SATA Cloudspeed Max and GEN2 ESS SSDs and Sandisk SATA CS1K
	  GEN1 ESS SSDs (#846)
	- Added Seagate FireCuda drives (#825)
	- Added Transcend MTS400 drives (#847)
	- Added Transcend MTS420 drives (#869)
	- Added Transcend SSD230 drives (#879)
	- Added Transcend SSD220S drives (#821)
	- Added Intel 540 Series SSDs (#803)
	- Added Intel 3710 Series SSDs (#824)
	- Added Micron 5100 ECO, PRO, and MAX Models (#861)
	- Added Samsung EVO SSD series - make regexp match less strict (#806)
  - Added Hitachi CinemaStar 5K1000	series (#758)
	- Added WDC WD4004FZWX disk to the Digital Black family (#765)
	- Added Samsung SSD 845DC EVO series (#866)
	- Added SK hynix SL308 family (#808)
	- Added WD Blue PC SSD family (#767)
	- Corrected Crucial M4 drivedb entry to include 32Gb model (#844)

2017-09-20  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd: use /dev/nvme/nvme.h on the recent versions
	os_darwin: 
	 - initial NVMe support for the darwin platform.
	 - NVMe device scan support
	 - Add device type autodetection

2017-08-08  Christian Franke  <franke@computer.org>

	ataprint.cpp: Fix ATA Security Level check.

	configure.ac: Detect MinGW libstdc++ problems with high
	'--image-base'.

	Update smartmontools-support mailing list address.
	Remove old mailing list address from all source files.

2017-05-03  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in,
	update-smart-drivedb.8.in: